[gd_scene load_steps=8 format=2]

[ext_resource path="res://Free/Traps/Fire/Off.png" type="Texture" id=1]
[ext_resource path="res://scripts/fire_trap.gd" type="Script" id=2]
[ext_resource path="res://Free/Traps/Fire/On (16x32).png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "off"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "on"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.10827
height = 3.87639

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.08465, 8.22914 )

[node name="firetTrap" type="StaticBody2D"]
collision_layer = 16

[node name="fire" type="Area2D" parent="."]
collision_layer = 16
script = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="fire"]
autoplay = "off"
anims/off = SubResource( 1 )
anims/on = SubResource( 3 )

[node name="texture" type="Sprite" parent="fire"]
position = Vector2( 0.841843, -14.8726 )
texture = ExtResource( 3 )
hframes = 3
frame = 1

[node name="fire_coll" type="CollisionShape2D" parent="fire"]
position = Vector2( 1.5874, -21.8268 )
shape = SubResource( 4 )
disabled = true

[node name="start_timer" type="Timer" parent="fire"]
wait_time = 3.0
autostart = true

[node name="stop_timer" type="Timer" parent="fire"]
wait_time = 6.0
autostart = true

[node name="body_coll" type="CollisionShape2D" parent="."]
position = Vector2( 0.595272, -7.1433 )
shape = SubResource( 2 )

[connection signal="body_entered" from="fire" to="fire" method="_on_fire_body_entered"]
[connection signal="timeout" from="fire/start_timer" to="fire" method="_on_start_timer_timeout"]
[connection signal="timeout" from="fire/stop_timer" to="fire" method="_on_stop_timer_timeout"]
